[gd_scene load_steps=5 format=1]

[ext_resource path="res://IntroScene/intro.gd" type="Script" id=1]
[ext_resource path="res://SplashScene/logo.png" type="Texture" id=2]
[ext_resource path="res://SplashScene/icon.png" type="Texture" id=3]
[ext_resource path="res://IntroScene/button1.png" type="Texture" id=4]

[node name="splashScreen" type="Node"]

script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}
fadeSpeed = 0.5
initTime = 1
showingTime = 4

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 796.0
margin/top = 208.0
margin/right = 866.0
margin/bottom = 222.0
text = "Made with:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="myLogo" type="Sprite" parent="."]

transform/pos = Vector2( 900, 360 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="myLogo1" type="Sprite" parent="."]

transform/pos = Vector2( 380.116, 360 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1091.0
margin/top = 636.0
margin/right = 1227.0
margin/bottom = 685.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


